# ai-agency

./: .env.development  .env.example  .gitignore  .pre-commit-config.yaml  .pulser_memory.json  .pulserrc  CONTRIBUTING.md  DELIVERABLE_SK2.md  DEPLOYMENT_SUMMARY.md  DEV3_COMPLETION_REPORT.md  DOC1-3_COMPLETE.md  MIGRATION_GUIDE.md  OPS3_COMPLETION_SUMMARY.md  PROD2_COMPLETION_REPORT.md  README.md  REPO_AUDITOR_IMPLEMENTATION.md  RESTRUCTURE_SUMMARY.md  SPRINT2_COMPLETE.md  SPRINT3_COMPLETE.md  SPRINT4_COMPLETE.md  SPRINT4_TRACK3_COMPLETE.md  SUPPORT.md  index.html  package-lock.json  package.json  pyproject.toml  tailwind.config.js  vercel.json
.claude/skills/: README.md
.github/scripts/: anthropic-audit.js
.github/workflows/: blue_green_deploy.yml  ci.yaml  deploy.yml  odoo-ci.yml  repo-audit.yml  rollback.yml
custom_addons/expense_approval/: README.rst  __manifest__.py
custom_addons/pulser_webhook/: README.md  __init__.py  __manifest__.py
custom_addons/qms_sop/: __manifest__.py
custom_addons/studio_automations/: __init__.py  __manifest__.py
docs/: CICD_SETUP.md  COST_ANALYSIS.md  DAILY_USAGE.md  GITHUB_OAUTH_SETUP.md  IMPROVEMENT_WORKFLOW.md  PERFORMANCE_BENCHMARKS.md  PRD_INTEGRATION.md  QUICK_REFERENCE.md  VS_CODE_EXTENSION.md  vscode_extension_architecture.md
docs/design/: ARCHITECTURE.md  PACKAGE_DESIGN.md
evals/: PRODUCTION_READINESS_SPRINT4.md  RESULTS.md  RESULTS_SPRINT4.md
evals/scenarios/: 01_oca_scaffolding.md  02_studio_export.md  03_odoo_sh_deploy.md  04_orm_compliance.md  05_docker_validation.md  06_record_rule_n1.md  07_migration_script.md  08_docker_compose_env.md  09_visual_parity.md  10_secrets_compliance.md  11_pulser_webhook_integration.md  12_qms_sop_workflow.md  README.md
evals/scripts/: 01_oca_scaffolding.sh  02_studio_export.sh  03_odoo_sh_deploy.sh  04_orm_compliance.sh  05_docker_validation.sh  06_record_rule_n1.sh  07_migration_script.sh  08_docker_compose_env.sh  09_visual_parity.sh  10_secrets_compliance.sh  11_pulser_webhook_integration.sh  12_qms_sop_workflow.sh  run_all_scenarios.sh  run_local_checks.sh
infra/do/: README.md  (+2 more)
knowledge/: INTEGRATION.md  INTEGRATION_POINTS.md  README.md
scripts/: check_secrets.sh  deploy_do.sh  docgen.py  health_check.py  health_check.sh  migration_template.py  new_module.py  scaffold_module.py  validate_docker_image.sh  validate_integration.sh
src/: App.tsx  main.tsx
templates/: ADR_template.md  manifest.py.j2  model.py.j2  security.csv.j2  sop.md.j2  view.xml.j2  wizard.py.j2  wizard_view.xml.j2
(+92 files in other folders)
